--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     </parent>
     <groupId>com.example</groupId>
     <artifactId>provaSpringIoC</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0.0</version>
     <name>provaSpringIoC</name>
     <description>provaSpringIoC</description>
     <properties>
@@ -23,6 +23,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
